maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:19: error: ')' expected but '}' found.
}
^JediEscaper:55: error: '=>' expected but '}' found.
	}
        ^